// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summ accepts one parameter 1`] = `
<Component
  v={2}
>
  <div>
    2
  </div>
</Component>
`;

exports[`Summ exists 1`] = `
<Component
  v={0}
>
  <div>
    0
  </div>
</Component>
`;

exports[`Summ te parent with its two nested children 1`] = `
<Component
  v={2}
>
  <div>
    <Component
      v={8}
    >
      <div>
        <Component
          v={11}
        >
          <div>
            11
          </div>
        </Component>
      </div>
    </Component>
  </div>
</Component>
`;

exports[`Summ the parent with a complex tree of children 1`] = `
<Component
  v={1}
>
  <div>
    <Component
      key="0"
      v={3}
    >
      <div>
        <Component
          v={6}
        >
          <div>
            6
          </div>
        </Component>
      </div>
    </Component>
    <Component
      key="1"
      v={5}
    >
      <div>
        5
      </div>
    </Component>
    <Component
      key="2"
      v={6}
    >
      <div>
        6
      </div>
    </Component>
  </div>
</Component>
`;

exports[`Summ the parent with its soley child 1`] = `
<Component
  v={2}
>
  <div>
    <Component
      v={8}
    >
      <div>
        8
      </div>
    </Component>
  </div>
</Component>
`;

exports[`Summ the parent with its two children separately 1`] = `
<Component
  v={1}
>
  <div>
    <Component
      key="0"
      v={3}
    >
      <div>
        3
      </div>
    </Component>
    <Component
      key="1"
      v={4}
    >
      <div>
        4
      </div>
    </Component>
  </div>
</Component>
`;
